# nacho

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
database/: platforms.json  programs.json  quirks.json
games/: happy.ch8
include/chip8/: chip8.h
include/cpu/: cpu.h
include/database/: database.h
include/display/: display.h
include/gui/: gui.h
include/shaders/: shader.h
shaders/: shader.fs
src/: chip8.cpp  cpu.cpp  database.cpp  display.cpp  gui.cpp  main.cpp
